Wed Apr 19 19:13:01 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * bin/dcps_tests.lst:
        
          Added tests/DCPS/Reconnect tests.
          
        * tests/DCPS/Reconnect/DataReaderListener.cpp:
        * tests/DCPS/Reconnect/DataWriterListener.cpp:
        * tests/DCPS/Reconnect/publisher.cpp:
        * tests/DCPS/Reconnect/subscriber.cpp:
        * tests/DCPS/Reconnect/Writer.cpp:
        * tests/DCPS/Reconnect/run_test.pl:
        
          Added more options to publisher and subscriber to help automate the
          reconnect tests. Changed run_test.pl to redirect the output to a log 
          file so that errors due to an abnormal shutdown and lost connection
          will not show on scoreboard. The final output "test PASSED" or 
          "test FAILED" will show the test result.

Wed Apr 19 13:04:26 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/FooTest3_0/FooTest3_0.mpc:

          Added inheritance from portableserver base project for subscriber. 
          This would resolve compilation errors shown on static builds on linux 
          platforms.

Mon Apr 17 09:45:30 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * DDS_release_notes.txt:

          Added release notes for main changes after 0.7 release.
          
Sun Apr 16 22:32:55 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/DCPSInfoRepo/DCPSDataWriterI.h:
        * tests/DCPS/DCPSInfoRepo/DCPSDataWriterI.cpp:
        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.h:
        * tests/DCPS/DCPSInfoRepo/DCPSDataReaderI.cpp:

          Added the notify_lost bool parameter to the remove_association()
          method which overrides the virtual methods in
          TAO::DCPS::DataReaderImpl/DataWriterImpl. This should fix the
          test failure on remove_association.

Sun Apr 16 21:43:11 USMST 2006  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendListener.cpp:
        